# rags-archive

./: .gitignore  requirements.txt
document-parsing/: pdf-parsing.ipynb
mmr-product-recommendation/: pyproject.toml
rag-articles/: pyproject.toml
rag-articles/notebook/: mmr-product-recommendation.ipynb  query_expansion.ipynb
